--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,12 @@
 /* Global styles
 -----------------------------------------------*/
 body {
-    color: #343434
+    color: #343434;
+    margin: 0px;
+    padding: 0;
+    font-family: "Montesrrat", sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
 }
 img {
     width: 300px;
@@ -12,6 +17,27 @@ a {
 
 a:hover {
     text-decoration: none;
+}
+
+h1 {
+    font-size: 100px;
+    line-height: 1;
+}
+
+h2 {
+    font-size: 45px;
+}
+
+h1, h2 {
+    margin: 0;
+    font-family: "Caveat", Cursive;
+    font-weight: 400;
+}
+
+.content-wrap {
+    width: 800px;
+    margin: 0 auto;
+    padding: 60px 0;
 }
 /* Profiles
 -----------------------------------------------*/
@@ -35,6 +61,7 @@ header {
     text-decoration: none;
     padding: 8px;
     border-radius: 4px;
+    display: inline-block;
 }
 .projects a:hover {
    background: rgba(47, 48, 47, 80%)
