--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,31 @@ h1, h2 {
     margin: 0 auto;
     padding: 60px 0;
 }
+h3 {
+    margin-bottom: 0;
+}
+
+.item-details h3 + p {
+    font-style: italic;
+}
+
+.item-details h3 ~ p {
+    margin: 0;
+}
+
+.divider > section {
+    border-bottom: 1px dashed #343434;
+    padding: 25px 0;
+}
+.divider > section:last-of-type {
+    border-bottom: none;
+}
 /* Profiles
 -----------------------------------------------*/
 header {
     background: #2F3061;
-    color: #F7FFF7
+    color: #F7FFF7;
+    text-align: center;
 }
 /* Projects
 -----------------------------------------------*/
@@ -67,10 +87,31 @@ header {
    background: rgba(47, 48, 47, 80%)
 }
 
+.project-item {
+    overflow: hidden;
+    border-bottom: 1px dashed #343434;
+    padding: 25px 0;
+}
+
+.project-item img {
+    float: left;
+    margin-right: 20px;
+}
+
+.project-item h3 {
+    margin-top: 0;
+}
+
 /* Work experiences
 -----------------------------------------------*/
 .work-experience {
     background: #A1C6D7
+}
+
+.job-item {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    column-gap: 20px;
 }
 
 
@@ -83,5 +124,19 @@ header {
 -----------------------------------------------*/
 
 footer {
-    color: #F7FFF7
+    text-align: center;
+    background: #343434;
+    color: #F7FFF7;
+}
+.contact-list {
+    list-style-type: none;
+    display: flex;
+    padding: 0;
+    justify-content: space-between;
+   
+}
+
+.contact-list a {
+    flex: 1, 1, 100px;
+    padding: 15px;
 }
